Text was centered with html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=scrip, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {
+            text-align: center;
+        }
+    </style>
 </head>
+
 <body>
     <h1>OMG! you will not believe me but ...</h1>
     <h1 id="excuse"></h1>
 
     <script src="./index.js"></script>
 </body>
+
 </html>
